# VidBot

./: .gitignore  app.py  main.py  pyproject.toml  test.py
templates/: index.html
